--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ PREFIX="."
 PUBLIC_MODE='yes'
 
 #═══════[ OWNER DETAILS ]═══════✧#
-OWNER_NAME="᚛Ibrahim adams᚜"
+OWNER_NAME="᚛Ibrahim adam᚜"
 OWNER_NUMBER=""
 
 #═══════[ BOT PROFILE ]═══════✧#
